<resources>
    <string name="app_name">Star Wars\nQuiz</string>

    <string name="loading_error">Unable to fetch API data. Error message: %1$s</string>

    <string name="start">Start Quiz</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="restart">Restart</string>
    <string name="history">History</string>
    <string name="clear_history">Clear History</string>


    <string name="quiz_num_questions">/10</string>
    <string name="quiz_score_label">Score: </string>
    <string name="quiz_points_label">points</string>
    <string name="quiz_highest_score_label">Highest Score: </string>

    <string name="question_1">Sample Question Placeholder</string>
    <string name="answer_1">Sample Answer Placeholder</string>
    <string name="fr_answer_placeholder">Type Answer</string>

    <string name="label_results">Results</string>
    <string name="your_score">%1$s points</string>

    <string name="share_text">I Got %1$s/10 on Star Wars Quizzer!!!</string>
    <string name="share_button_description">Button for sharing score to other apps</string>

    <string name="highest_score">Highest score: %1$s points</string>

</resources>