<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <!-- Header Layout -->
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true">

        <!-- Left LinearLayout -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:id="@+id/tv_quiz_question_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <TextView
                android:id="@+id/tv_quiz_num_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:text="@string/quiz_num_questions"/>

        </LinearLayout>

        <!-- Right LinearLayout -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:id="@+id/tv_quiz_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:text="@string/quiz_score_label"/>

            <TextView
                android:id="@+id/tv_quiz_current_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5" />

        </LinearLayout>

    </LinearLayout>

    <!-- Body Layout -->
    <LinearLayout
        android:id="@+id/body_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/header_layout"
        android:layout_above="@id/footer_layout"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_quiz_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:text="@string/question_1"
            android:layout_marginVertical="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/fr_answer_placeholder">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_answer_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!-- Button Layout -->
    <FrameLayout
        android:id="@+id/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:text="@string/next"
            android:textSize="20sp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="50dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:text="@string/submit"
            android:textSize="20sp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="50dp" />

    </FrameLayout>

</RelativeLayout>