<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/tv_results_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:paddingVertical="32dp"
        android:paddingHorizontal="16dp"
        android:text="@string/label_results"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/results_final_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_results_header"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tv_final_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:paddingVertical="32dp"
            android:paddingHorizontal="16dp"
            android:textSize="60sp"/>

        <TextView
            android:id="@+id/tv_points_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:paddingVertical="32dp"
            android:paddingHorizontal="16dp"
            android:textSize="60sp"
            android:text="@string/quiz_points_label"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/results_highest_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/results_final_score"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tv_highest_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:paddingVertical="32dp"
            android:paddingHorizontal="16dp"
            android:text="@string/quiz_highest_score_label"/>

        <TextView
            android:id="@+id/tv_highest_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:paddingVertical="32dp"
            android:paddingHorizontal="16dp" />

    </LinearLayout>

    <!-- Button Layout -->
    <LinearLayout
        android:id="@+id/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/home"
            android:textSize="20sp"
            android:padding="15dp" />

        <Button
            android:id="@+id/button_restart_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/restart"
            android:textSize="20sp"
            android:padding="15dp" />

    </LinearLayout>

</RelativeLayout>
